--- a/composer.json
+++ b/composer.json
@@ -6,16 +6,15 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "bnbwebexpertise/pdf-to-image": "^1.2",
         "laravel/framework": "5.4.*",
+        "skydiver/laravel-materialize-css": "dev-master",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~5.0",
-        "skydiver/laravel-materialize-css": "dev-master"
-    },
+        "phpunit/phpunit": "~5.0"
+        },
     "autoload": {
         "classmap": [
             "database"
