--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "php": ">=5.6.4",
         "laravel/framework": "5.4.*",
         "skydiver/laravel-materialize-css": "dev-master",
+        "intervention/image": "dev-master",
         "laravel/tinker": "~1.0"
     },
     "require-dev": {
