--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
-        "laravel/framework": "5.4.*",
-        "skydiver/laravel-materialize-css": "dev-master",
         "intervention/image": "dev-master",
-        "laravel/tinker": "~1.0"
+        "laravel/framework": "5.4.*",
+        "laravel/tinker": "~1.0",
+        "rguedes/pdfmerger": "^1.0",
+        "skydiver/laravel-materialize-css": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
