Customização da paginação para Bootstrap4

--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         "intervention/image": "dev-master",
         "laravel/framework": "5.4.*",
         "laravel/tinker": "~1.0",
-        "rguedes/pdfmerger": "^1.0",
-        "skydiver/laravel-materialize-css": "dev-master"
+		"lynx39/lara-pdf-merger": "1.0.*",
+		"skydiver/laravel-materialize-css": "dev-master"
     },
     "require-dev": {
         "fzaninotto/faker": "~1.4",
