--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=5.6.4",
+        "barryvdh/laravel-debugbar": "~2.4",
         "doctrine/dbal": "^2.9",
         "intervention/image": "dev-master",
         "laravel/framework": "5.4.*",
